[gd_scene load_steps=2 format=4 uid="uid://bv8k3m7qaqh2x"]

[ext_resource type="Script" path="res://Controllers/UIController/Packages/Core/BaseOverlay.gd" id="1_base"]

[node name="BaseOverlay" type="CanvasLayer"]
script = ExtResource("1_base")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 350.0
offset_bottom = 250.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GradientBackground" type="TextureRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Border" type="ReferenceRect" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 30.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="Control/Panel/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Overlay Title"
vertical_alignment = 1

[node name="TitleSeparator" type="HSeparator" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 34.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
anchor_top = 0.0
offset_top = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
